3x-ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 3x-ui
  namespace: 3x-ui-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: 3x-ui
  template:
    metadata:
      labels:
        app: 3x-ui
    spec:
      containers:
        - name: 3x-ui
          image: ghcr.io/mhsanaei/3x-ui:latest
          ports:
            - containerPort: 2053
              name: https
          volumeMounts:
            - name: tls-certs
              mountPath: /etc/3x-ui/certs
              readOnly: true
            - name: data
              mountPath: /etc/x-ui
            - name: quiz-tls
              mountPath: /etc/3x-ui/quiz-certs
              readOnly: true
      volumes:
        - name: tls-certs
          secret:
            secretName: px-tls
        - name: data
          hostPath:
            path: /data/3x-ui
            type: DirectoryOrCreate
        - name: quiz-tls
          secret:
            secretName: quiz-tls
