3x-ui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: x3-ui-svc
  namespace: 3x-ui-system
spec:
  selector:
    app: 3x-ui
  ports:
    - name: trojan
      port: 2053
      targetPort: 2053
      protocol: TCP
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
