3x-ui/ingressroute-3x-ui-tls.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: 3x-ui-tls-passthrough
  namespace: 3x-ui-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`px.awspythoncourses.org`)
      services:
        - name: x3-ui-svc
          port: 2053
  tls:
    passthrough: true
